# ChasHackathon

./: INTEGRATION_SUMMARY.md  POSTGRES_SETUP.md  TROUBLESHOOTING.md  docker-compose.yml  polytope.yml
modules/config-manager/conf/: couchbase.yaml
modules/flowmentor-api/: README.md  TEMPORAL_WORKFLOWS.md  polytope.yml  pyproject.toml  pyrightconfig.json
modules/flowmentor-api/src/backend/: main.py  models.py
modules/flowmentor-api/src/backend/clients/: couchbase.py  database.py  postgres.py  twilio.py
modules/flowmentor-api/src/backend/conf/: __init__.py  temporal.py
modules/flowmentor-api/src/backend/db/: models.py  utils.py
modules/flowmentor-api/src/backend/init/: __init__.py  temporal.py
modules/flowmentor-api/src/backend/routes/: base.py  utils.py
modules/flowmentor-api/src/backend/utils/: auth.py  validation.py
modules/flowmentor-api/src/backend/workflows/: __init__.py  daily_reflection.py  focus_loop.py  meeting_scheduler.py  morning_check.py  scheduler.py  weekly_growth.py
modules/flowmentor-frontend/: README.md  package-lock.json  package.json  polytope.yml
modules/flowmentor-frontend/app/: app.css  routes.ts
modules/flowmentor-frontend/app/components/: Header.tsx
modules/flowmentor-frontend/app/lib/: api.ts
modules/flowmentor-frontend/app/routes/: afternoon.tsx  dashboard.tsx  focus.$blockId.tsx  home.tsx  morning.tsx  plan.tsx  tasks.tsx  weekly.tsx
modules/postgres/: polytope.yml
