[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.1",
    "pyjwt[cryptography]>=2.10.1",
    "temporal-client",
    "twilio>=9.0.0",
    "uvicorn[standard]==0.35.0",
]

[project.scripts]
app = "backend.main:main"

[dependency-groups]
dev = [
    "ruff>=0.0.292",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
temporal-client = { path = "/lib/py/temporal-client", editable = true }
